# dailyStoicBot

./: main.py  pyproject.toml
